@@ -6,6 +6,7 @@
 void evas_test_init(TCase *tc);
 void evas_test_textblock(TCase *tc);
 void evas_test_text(TCase *tc);
+void evas_test_callbacks(TCase *tc);
 
 
 #endif /* _EVAS_SUITE_H */
